# Kratos

applications/: CMakeLists.txt
applications/AdjointFluidApplication/custom_elements/: vms_adjoint_element.h
applications/AdjointFluidApplication/custom_schemes/: adjoint_bossak_scheme.h
applications/AdjointFluidApplication/custom_utilities/: eigen_decomposition.h
applications/AdjointFluidApplication/python_scripts/: adjoint_vmsmonolithic_solver.py
applications/FluidDynamicsApplication/: CMakeLists.txt  fluid_dynamics_application.cpp  fluid_dynamics_application.h
applications/FluidDynamicsApplication/custom_conditions/: VMSOversetCondition3D.cpp  VMSOversetCondition3D.h  VmsOversetCondition3D.cpp  VmsOversetCondition3D.h
applications/FluidDynamicsApplication/custom_elements/: vms.h
applications/FluidDynamicsApplication/python_scripts/: overset_check_and_prepare_model_process_fluid.py  overset_trilinos_navier_stokes_solver_vmsmonolithic.py  python_solvers_wrapper_fluid.py
applications/overset_application/: CMakeLists.txt  OversetApplication.py  overset_application.cpp  overset_application.h
applications/overset_application/custom_conditions/: Hinge.h  Hinge3D.h  HingeData.h  HingeDonorData.h  HingeDonorInfo.h  OversetCondition.cpp  OversetCondition.h  OversetCondition3D.cpp  OversetCondition3D.h  overset_condition.cpp  overset_condition.h
applications/overset_application/custom_python/: add_custom_strategies_to_python.cpp  add_custom_utilities_to_python.cpp  add_overset_schemes_to_python.cpp  add_overset_schemes_to_python.h  add_overset_strategies_to_python.cpp  add_overset_strategies_to_python.h  add_overset_utilities_to_python.cpp  add_overset_utilities_to_python.h  overset_python_application.cpp
applications/overset_application/custom_strategies/builder_and_solvers/: overset_trilinos_block_builder_and_solver.h  overset_trilinos_block_builder_and_solver_periodic.h
applications/overset_application/custom_strategies/schemes/: overset_trilinos_predictorcorrector_velocity_bossak_scheme_turbulent.h  overset_trilinos_residualbased_incrementalupdate_static_scheme.h
applications/overset_application/custom_utilities/: Coordinate.h  DistributedAssignment.h  DistributedPointSearchMethod.h  DonorInfo.h  InterpolationInput.h  InterpolationMethod.h  InterpolationOutput.h  Interpolator.h  OversetAssembler.h  PointSearchInput.h  PointSearchMethod.h  PointSearchMethodTemp.h  PointSearchOutput.h  ResultWriter.h  SteSearcher.h  overset_assembly.cpp
applications/overset_application/external_includes/DistributedAssignment/: DistributedAssignmentForCppUser.h
applications/overset_application/external_includes/SplitTreeSearch/: acuSte.hpp  mtxHeap.h  ste.h  steDim.h  steForCppUser.hpp
applications/overset_application/external_includes/SplitTreeSearch/include_files/: steDimf.h
applications/pure_diffusion_application/: CMakeLists.txt  PureDiffusionApplication.py  pure_diffusion_application.cpp  pure_diffusion_application.h
applications/pure_diffusion_application/custom_conditions/: PointSourceCondition3D.cpp  PointSourceCondition3D.h  PoissonHeatFluxCondition3D.cpp  PoissonHeatFluxCondition3D.h  PoissonOversetCondition3D.cpp  PoissonOversetCondition3D.h  pointsource_2d.cpp  pointsource_2d.h  pointsource_3d.cpp  pointsource_3d.h  poisson_overset_2d.cpp  poisson_overset_2d.h  poisson_overset_3d.cpp  poisson_overset_3d.h
applications/pure_diffusion_application/custom_elements/: PoissonElement3D.cpp  PoissonElement3D.h  poisson_2d.cpp  poisson_2d.h  poisson_3d.cpp  poisson_3d.h
applications/pure_diffusion_application/custom_python/: pure_diffusion_python_application.cpp
applications/pure_diffusion_application/custom_utilities/: calculate_mean_temp.h
applications/pure_diffusion_application/python_scripts/: overset_trilinos_pure_diffusion_solver.py  strategy_python.py  trilinos_pure_diffusion_solver.py
applications/pure_diffusion_application/test_examples/2d_example/: example.mdpa  example.py
applications/pure_diffusion_application/test_examples/3d_cylinder/: ProjectParameters.json  one_cylinder-mod-mpi.py  one_cylinder-mod.mdpa  one_cylinder-mod.py
applications/trilinos_application/custom_strategies/builder_and_solvers/: trilinos_block_builder_and_solver_periodic.h
kratos/includes/: gid_gauss_point_container.h
